--- a/flutter_amplify_storage/amplify/backend/auth/flutteramplifystoragf0425bd1/flutteramplifystoragf0425bd1-cloudformation-template.yml
+++ b/flutter_amplify_storage/amplify/backend/auth/flutteramplifystoragf0425bd1/flutteramplifystoragf0425bd1-cloudformation-template.yml
@@ -129,6 +129,10 @@ Parameters:
     Type: String
   
             
+  hostedUIProviderCreds:
+    Type: String
+  
+            
   oAuthMetadata:
     Type: String
   
@@ -137,6 +141,7 @@ Parameters:
   userPoolGroupList:
     Type: CommaDelimitedList
       
+            
   serviceName:
     Type: String
   
@@ -149,10 +154,6 @@ Parameters:
   dependsOn:
     Type: CommaDelimitedList
       
-  hostedUIProviderCreds:
-    Type: String
-  
-            
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
   
@@ -167,7 +168,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'flutte28eae8c4_sns-role', !Join ['',[ 'sns', '28eae8c4', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'fluttef0425bd1_sns-role', !Join ['',[ 'sns', 'f0425bd1', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -179,10 +180,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: flutte28eae8c4_role_external_id
+                sts:ExternalId: fluttef0425bd1_role_external_id
       Policies:
         -
-          PolicyName: flutte28eae8c4-sns-policy
+          PolicyName: fluttef0425bd1-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -232,7 +233,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: flutte28eae8c4_role_external_id
+        ExternalId: fluttef0425bd1_role_external_id
     
   
   UserPoolClientWeb:
@@ -240,7 +241,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: flutte28eae8c4_app_clientWeb
+      ClientName: fluttef0425bd1_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -250,7 +251,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: flutte28eae8c4_app_client
+      ClientName: fluttef0425bd1_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -261,7 +262,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '28eae8c4', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'f0425bd1', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -315,7 +316,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: flutte28eae8c4_userpoolclient_lambda_iam_policy
+      PolicyName: fluttef0425bd1_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -332,7 +333,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: flutte28eae8c4_userpoolclient_lambda_log_policy
+      PolicyName: fluttef0425bd1_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -722,7 +723,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'flutteramplifystorag28eae8c4_identitypool_28eae8c4', !Join ['',['flutteramplifystorag28eae8c4_identitypool_28eae8c4', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'flutteramplifystoragf0425bd1_identitypool_f0425bd1', !Join ['',['flutteramplifystoragf0425bd1_identitypool_f0425bd1', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
