--- a/flutter_amplify_storage/ios/Runner/Info.plist
+++ b/flutter_amplify_storage/ios/Runner/Info.plist
@@ -41,5 +41,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>galleryapp</string>
+            </array>
+        </dict>
+    </array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to photos</string>
+
 </dict>
 </plist>
