--- a/flutter_amplify_storage/pubspec.yaml
+++ b/flutter_amplify_storage/pubspec.yaml
@@ -23,14 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  amplify_storage_s3: ^0.1.0
+  amplify_flutter: <1.0.0
+  amplify_storage_s3: <1.0.0
+  amplify_auth_cognito: <1.0.0
   cupertino_icons: ^1.0.0
+  file_picker: ^2.1.6
+  cached_network_image: ^2.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
 
 
 flutter:
